--- a/_mmpilot.yml
+++ b/_mmpilot.yml
@@ -1,8 +1,13 @@
 html:
   prettyurls: false
+  sitemap: ''
+styles:
+  sourcemap: false
+scripts:
+  sourcemap: false
 
 ## You can add data for site here which will be available as site.{key} in pug templates
 site:
-  url: "https://locahost" # Your sites's URL
+  url: "http://localhost" # Your sites's URL
   title: "" # Your site's title
   desc: "A Free Coming Soon Bootstrap 4 Template by TemplateFlip.com"  # Your site's description
